# refugiart-bazar-backend

./: .replit  README.md  Requirements.txt  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start_python_backend.sh
.local/state/replit/agent/design_reference/6413f869-7caa-4136-9e06-dd0e5bf6d2a6/: 0ea87eb6-ae0d-4ea4-94e9-6d5527e453f5.html
client/src/: App.tsx  index.css
client/src/components/: artist-card.tsx  artwork-card.tsx  header.tsx  upload-form.tsx
client/src/pages/: artist-profile.tsx  artwork-detail.tsx  home.tsx  landing.tsx  marketplace.tsx  upload-artwork.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
